refactor: simplify BearerTokenStatus private methods by removing static parameters
- Remove static parameters from buildWwwAuthenticateHeader methods that were always passed the same values
- Rename methods to better reflect their specific purposes:
  - buildWwwAuthenticateHeader → buildInvalidTokenHeader
  - buildWwwAuthenticateHeaderWithScope → buildInsufficientScopeHeader
  - buildWwwAuthenticateHeaderWithPrivileges → buildInsufficientPrivilegesHeader
- Inline constant values directly in method implementations
- Update method documentation to reflect simplified signatures

This improves code readability and maintainability by eliminating unnecessary parameters
and making method names more descriptive of their actual behavior.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>